mdds 0.11.2

* multi_type_vector

  * fixed various memory leaks associated with the set() method when a
    value overwrites an existing element in a managed block.

mdds 0.11.1

* all

  * fixed a large number of outstanding defects reported by Coverity
    Scan.

* multi_type_vector

  * fixed 2 cases of double-free bug in the variant of swap() that
    allows segmented swapping.

mdds 0.11.0

* sorted_string_map (new)

  * new data structure to support efficient mapping of textural keys
    to numeric values when the key values are known at compile time.

* multi_type_vector

  * fixed a bug in transfer() where two adjacent blocks of identical
    type would fail to be merged in some circumstances.

  * added shrink_to_fit() to allow trimming of any excess capacity
    from all non-empty blocks.

  * fixed a double-free bug in the variant of swap() that allows
    segmented swapping.

  * improved the exception message when the block position lookup
    fails to find valid block position, to make it easier to debug.

mdds 0.10.3

* multi_type_vector

  * added 2 variants of release_range() that take start and end positions,
    to allow releasing of elements in specified interval.  One of the
    variants takes iterator as a block position hint.

    * iterator release_range(size_type start_pos, size_type end_pos)

    * iterator release_range(const iterator& pos_hint, size_type start_pos, size_type end_pos)

  * added push_back() and push_back_empty(), to allow efficient way to
    append new values to the end of the container.

    * template<typename _T>
      iterator push_back(const _T& value)

    * iterator push_back_empty()

mdds 0.10.2

* multi_type_vector

  * fixed a bug in transfer() that would trigger an assertion and
    eventually lead to a crash.  The problem occurred when a range of
    data to be transferred spanned over 2 blocks and consisted of the
    lower part of an upper block and the upper part of a lower block.

mdds 0.10.1
